cabal-version:       1.22
name:                hie-compat
version:             0.3.1.1
synopsis:            HIE files for GHC 8.8 and other HIE file backports
license:             Apache-2.0
description:
  Backports for HIE files to GHC 8.8, along with a few other backports
  of HIE file related fixes for ghcide.

  THIS DOES NOT LET YOU READ HIE FILES WITH MISMATCHED VERSIONS OF GHC
license-file:        LICENSE
author:              Zubin Duggal
maintainer:          zubin.duggal@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md README.md
category:            Development
homepage:            https://github.com/haskell/haskell-language-server/tree/master/hie-compat#readme
bug-reports:         https://github.com/haskell/haskell-language-server/issues

source-repository head
    type:     git
    location: https://github.com/haskell/haskell-language-server.git

flag ghc-lib
  description: build against ghc-lib instead of the ghc package
  default: False
  manual: True

library
  default-language:    Haskell2010
  build-depends:
     base < 4.19, array, bytestring, containers, directory, filepath, transformers
  if flag(ghc-lib) && impl(ghc < 9)
    build-depends: ghc-lib < 9.0
  else
    build-depends: ghc >= 8.10, ghc-boot
  if (impl(ghc >= 9.0) && impl(ghc < 9.1))
    ghc-options: -Wall -Wno-name-shadowing
  else
    ghc-options: -Wall -Wno-name-shadowing

  exposed-modules:
    Compat.HieAst
    Compat.HieBin
    Compat.HieTypes
    Compat.HieDebug
    Compat.HieUtils

  if (impl(ghc > 8.9) && impl(ghc < 8.11))
    hs-source-dirs: src-ghc810 src-reexport
  if (impl(ghc >= 9.0) && impl(ghc < 9.1) || flag(ghc-lib))
    hs-source-dirs: src-ghc90 src-reexport-ghc9
  if (impl(ghc >= 9.2) && impl(ghc < 9.3))
    hs-source-dirs: src-ghc92 src-reexport-ghc9
  if (impl(ghc >= 9.4) && impl(ghc < 9.7))
    hs-source-dirs: src-reexport-ghc92
