cabal-version: 2.4
name:          hls-graph
version:       1.5.1.0
synopsis:      Haskell Language Server internal graph API
description:
  Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>

homepage:      https://github.com/haskell/haskell-language-server#readme
bug-reports:   https://github.com/haskell/haskell-language-server/issues
license:       Apache-2.0
license-file:  LICENSE
author:        The Haskell IDE Team
maintainer:    alan.zimm@gmail.com
copyright:     The Haskell IDE Team
category:      Development
build-type:    Simple
data-files:
    html/profile.html
    html/shake.js

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

flag embed-files
  default: False
  manual: True
  description: Embed data files into the shake library

source-repository head
  type:     git
  location: https://github.com/haskell/haskell-language-server

library
  exposed-modules:
    Development.IDE.Graph
    Development.IDE.Graph.Classes
    Development.IDE.Graph.Database
    Development.IDE.Graph.Rule

  other-modules:
    Development.IDE.Graph.Internal.Action
    Development.IDE.Graph.Internal.Options
    Development.IDE.Graph.Internal.Rules
    Development.IDE.Graph.Internal.Database
    Development.IDE.Graph.Internal.Ids
    Development.IDE.Graph.Internal.Intern
    Development.IDE.Graph.Internal.Paths
    Development.IDE.Graph.Internal.Profile
    Development.IDE.Graph.Internal.Types
    Paths_hls_graph

  autogen-modules:  Paths_hls_graph

  hs-source-dirs:     src
  build-depends:
    , async
    , base >=4.12 && <5
    , bytestring
    , containers
    , deepseq
    , directory
    , exceptions
    , extra
    , filepath
    , hashable
    , js-dgtable
    , js-flot
    , js-jquery
    , primitive
    , time
    , transformers
    , unordered-containers

  if flag(embed-files)
        cpp-options: -DFILE_EMBED
        build-depends:
            file-embed >= 0.0.11,
            template-haskell

  ghc-options:
    -Wall -Wredundant-constraints -Wno-name-shadowing
    -Wno-unticked-promoted-constructors

  if flag(pedantic)
    ghc-options: -Werror

  default-language:   Haskell2010
  default-extensions:
    DataKinds
    KindSignatures
    TypeOperators
