cabal-version: 2.4
name:          hls-plugin-api
version:       2.1.0.0
synopsis:      Haskell Language Server API for plugin communication
description:
  Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>

homepage:      https://github.com/haskell/haskell-language-server#readme
bug-reports:   https://github.com/haskell/haskell-language-server/issues
license:       Apache-2.0
license-file:  LICENSE
author:        The Haskell IDE Team
maintainer:    alan.zimm@gmail.com
copyright:     The Haskell IDE Team
category:      Development
build-type:    Simple

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

-- This flag can be used to avoid the dependency on hw-fingertree.
-- We can set this temporarily if we have problems building hw-fingertree
-- for a new version of GHC.
flag use-fingertree
  description: Use fingertree implementation of RangeMap
  default:     True
  manual:      False

source-repository head
  type:     git
  location: https://github.com/haskell/haskell-language-server

library
  exposed-modules:
    Ide.Plugin.Error
    Ide.Plugin.Config
    Ide.Plugin.ConfigUtils
    Ide.Plugin.Properties
    Ide.Plugin.RangeMap
    Ide.Plugin.Resolve
    Ide.PluginUtils
    Ide.Types
    Ide.Logger

  hs-source-dirs:     src
  build-depends:
    , aeson
    , base                  >=4.12    && <5
    , co-log-core
    , containers
    , data-default
    , dependent-map
    , dependent-sum         >=0.7
    , Diff                  ^>=0.4.0
    , dlist
    , extra
    , filepath
    , ghc
    , hashable
    , hls-graph             == 2.1.0.0
    , lens
    , lens-aeson
    , lsp                   ^>=2.1.0.0
    , mtl
    , opentelemetry         >=0.4
    , optparse-applicative
    , prettyprinter
    , regex-tdfa            >=1.3.1.0
    , row-types
    , stm
    , text
    , time
    , transformers
    , unliftio
    , unordered-containers
    , megaparsec > 9

  if os(windows)
    build-depends: Win32

  else
    build-depends: unix

  ghc-options:
    -Wall -Wredundant-constraints -Wno-name-shadowing
    -Wno-unticked-promoted-constructors

  if flag(pedantic)
    ghc-options: -Werror
  if impl(ghc >= 9)
    ghc-options: -Wunused-packages

  if flag(use-fingertree)
    cpp-options: -DUSE_FINGERTREE
    build-depends: hw-fingertree

  default-language:   Haskell2010
  default-extensions:
    DataKinds
    KindSignatures
    TypeOperators

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  other-modules:    Ide.PluginUtilsTest
  build-depends:
      base
    , hls-plugin-api
    , tasty
    , tasty-hunit
    , tasty-rerun
    , tasty-quickcheck
    , text
    , lsp-types
    , containers

benchmark rangemap-benchmark
  -- Benchmark doesn't make sense if fingertree implementation
  -- is not used.
  if !flag(use-fingertree)
    buildable: False
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   bench
  main-is:          Main.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , hls-plugin-api
    , lsp-types
    , criterion
    , random
    , random-fu
    , deepseq
