name:                hls-install
version:             0.8.0.0
synopsis:            Install the haskell-language-engine
license:             BSD3
author:              Many, TBD when we release
maintainer:          samuel.pilz@posteo.net
copyright:           2019
build-type:          Simple
cabal-version:       >=2.0

library
  hs-source-dirs:      src
  exposed-modules:     HlsInstall
  other-modules:       BuildSystem
                     , Stack
                     , Version
                     , Cabal
                     , Print
                     , Env
                     , Help
                     , Utils
  build-depends:       base >= 4.9 && < 5
                     , directory
                     , process
                     , filepath
                     , optparse-applicative
                     , extra
                     , text
  default-extensions: LambdaCase
                    , TupleSections
                    , RecordWildCards
  default-language:    Haskell2010

  if flag(run-from-stack)
    cpp-options:       -DRUN_FROM_STACK
  else
    build-depends: cabal-install-parsers

flag run-from-stack
  description:         Inform the application that it is run from stack
  default:             False
  manual:              True
