name:          hls-install
version:       0.8.0.0
synopsis:      Install the haskell-language-server
license:       BSD3
author:        Many, TBD when we release
maintainer:    samuel.pilz@posteo.net
copyright:     2019
build-type:    Simple
cabal-version: 2.0

library
  hs-source-dirs:     src
  exposed-modules:    HlsInstall
  other-modules:
    BuildSystem
    Cabal
    Env
    Help
    Print
    Stack
    Version

  build-depends:
      base       >=4.9    && <5
    , directory
    , extra
    , filepath
    , shake      >=0.17.5
    , text

  default-extensions:
    LambdaCase
    RecordWildCards
    TupleSections

  default-language:   Haskell2010

  if flag(run-from-stack)
    cpp-options: -DRUN_FROM_STACK

  else
    build-depends: cabal-install-parsers

flag run-from-stack
  description: Inform the application that it is run from stack
  default:     False
  manual:      True

executable hls-install
  main-is: ../install.hs
  build-depends: base
    , hls-install
