cabal-version:      3.0
name:               generate-ci
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple

executable generate-ci
    main-is:          gen_ci.hs
    ghc-options:      -Wall
    build-depends:    base,
                      bytestring,
                      containers,
                      directory,
                      filepath,
                      aeson,
                      yaml >= 0.11.11.2
    default-language: Haskell2010
