cabal-version:      3.0
-- This library is a copy of the sublibrary ghcide-test-utils until stack and hackage support public sublibraries
build-type:         Simple
category:           Development
name:               ghcide-test-utils
version:            1.8.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Digital Asset and Ghcide contributors
maintainer:         Ghcide contributors
copyright:          Digital Asset and Ghcide contributors 2018-2022
synopsis:           Test utils for ghcide
description:
    Test utils for ghcide
homepage:           https://github.com/haskell/haskell-language-server/tree/master/ghcide#readme
bug-reports:        https://github.com/haskell/haskell-language-server/issues
tested-with:        GHC == 8.10.7 || == 9.0.2 || == 9.2.3 || == 9.2.4

source-repository head
    type:     git
    location: https://github.com/haskell/haskell-language-server.git


library
    default-language: Haskell2010
    build-depends:
        aeson,
        base > 4.9 && < 5,
        containers,
        data-default,
        directory,
        extra,
        filepath,
        ghcide,
        lsp-types,
        hls-plugin-api,
        lens,
        lsp-test ^>= 0.14,
        tasty-hunit >= 0.10,
        text,
    hs-source-dirs: src
    exposed-modules:
        Development.IDE.Test
        Development.IDE.Test.Diagnostic
    default-extensions:
        BangPatterns
        DeriveFunctor
        DeriveGeneric
        FlexibleContexts
        GeneralizedNewtypeDeriving
        LambdaCase
        NamedFieldPuns
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        ViewPatterns
