# Copyright (c) 2019 The DAML Authors. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:haskell.bzl",
    "da_haskell_library",
    "da_haskell_test",
)

da_haskell_library(
    name = "hie-core-testing",
    srcs = glob(["src/**/*.hs"]),
    hackage_deps = [
        "base",
        "containers",
        "haskell-lsp-types",
        "lens",
        "lsp-test",
        "parser-combinators",
        "tasty-hunit",
        "text",
    ],
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/hie-core",
    ],
)

da_haskell_library(
    name = "hie-core-test-runfiles",
    srcs = glob(["bazel/**/*.hs"]),
    hackage_deps = [
        "base",
        "filepath",
    ],
    src_strip_prefix = "bazel",
    visibility = ["//visibility:public"],
    deps = [
        "//libs-haskell/bazel-runfiles",
    ],
)

da_haskell_test(
    name = "hie-core-tests",
    srcs = glob(["exe/**/*.hs"]),
    data = ["//compiler/hie-core:hie-core-exe"],
    hackage_deps = [
        "base",
        "extra",
        "filepath",
        "haskell-lsp-types",
        "lsp-test",
        "tasty",
        "tasty-hunit",
        "text",
    ],
    src_strip_prefix = "exe",
    deps = [
        ":hie-core-test-runfiles",
        ":hie-core-testing",
        "//compiler/hie-core",
    ],
)
